# SmartTaxiService

./: .gitignore  .ycm_extra_conf.py  README.md  meson.build
include/: Events.hpp  Haversine.hpp  Messages.hpp  Server.hpp  Service.hpp  ServiceCore.hpp  TaxiStateTransitions.hpp  Worker.hpp  server.hpp  service.hpp  service_core.hpp  worker.hpp
include/ClientServer/: ClientServer.hpp  ClientWorker.hpp
include/ClientService/: ClientService.hpp  ClientServiceCore.hpp  ClientStateTransitions.hpp
include/Server/: Server.hpp  Worker.hpp
include/Service/: Service.hpp  ServiceCore.hpp
include/TaxiServer/: TaxiServer.hpp  TaxiWorker.hpp
include/TaxiService/: Events.hpp  TaxiService.hpp  TaxiServiceCore.hpp  TaxiStateTransitions.hpp
include/Tools/: Haversine.hpp
src/: Server.cpp  Service.cpp  ServiceCore.cpp  Worker.cpp  main.cpp  meson.build  server.cpp  service.cpp  worker.cpp
src/ClientServer/: ClientServer.cpp  ClientWorker.cpp
src/ClientService/: ClientService.cpp  ClientServiceCore.cpp
src/TaxiServer/: TaxiServer.cpp  TaxiWorker.cpp
src/TaxiService/: TaxiService.cpp  TaxiServiceCore.cpp
src/Tools/: Haversine.cpp
